_sass/_timeline.scss
.timeline ul li {
  list-style-type: none;
  position: relative;
  width: 1px;
  margin: 0 auto;
  padding-top: 50px;
  background: $grey-color-light;
  transition: background .5s ease-in-out;

  &.in-view::after {
    background: $brand-color;
  }
  div {
    position: relative;
    bottom: 0;
    width: 400px;
    padding: 15px;
    transition: all .5s ease-in-out;
    background-color: $grey-color-med-light;
    visibility: hidden;
    opacity: 0;

    &::before {
      content: '';
      position: absolute;
      bottom: 7px;
      width: 0;
      height: 0;
      border-style: solid;
    }
  }
  &::after {
    content: '';
    position: absolute;
    left: 50%;
    bottom: 0;
    transform: translateX(-50%);
    width: 30px;
    height: 30px;
    border-radius: 50%;
    background: inherit;
  }
  &:nth-child(odd) div {
    transform: translate3d(200px, 0, 0);
    left: 45px;

    &::before {
      left: -15px;
      border-width: 8px 16px 8px 0;
      border-color: transparent lighten($grey-color, 55%) transparent transparent;
    }
  }
  &:nth-child(even) div {
    text-align: right;
    transform: translate3d(-200px, 0, 0);
    left: -439px;

    &::before {
      right: -15px;
      border-width: 8px 0 8px 16px;
      border-color: transparent transparent transparent  lighten($grey-color, 55%);
    }
  }
  &.in-view div {
    transform: none;
    visibility: visible;
    opacity: 1;
  }
  time {
    display: block;
    font-size: 1em;
    font-weight: bold;
  }
  img {
    margin: 10px 0;
  }
}
@media screen and (max-width: 900px) {
  .timeline ul li div {
    width: 250px;
  }
  .timeline ul li:nth-child(even) div {
    left: -289px; /*250+45-6*/
  }
}
@media screen and (max-width: 600px) {
  .timeline ul li {
    margin-left: 20px;
  }
  .timeline ul li div {
    width: calc(100vw - 91px);
  }
  .timeline ul li:nth-child(even) div {
    left: 45px;
  }
  .timeline ul li:nth-child(even) div::before {
    left: -15px;
    border-width: 8px 16px 8px 0;
    border-color: transparent $brand-color transparent transparent;
  }
}

